syntax = "proto3";

package smartmate;

message Sort {
  string field = 1;
  int32 value = 2;
}

enum Matcher {
  STRING = 0;
  REGEX = 1;
  OBJECT = 2;
}

message Where {
  string field = 1;
  string value = 2;
  Matcher matcher = 3;
}

message QueryRequest {
  // 'where' will be a serialized JSON object. Generally it's not recommended,
  // but seems to be the most pragmatic way for this use case.
  // See https://github.com/grpc/grpc/issues/8432
  repeated Where where = 1; // empty => all
  repeated string fields = 2; // empty => all
  int32 limit = 3; // 0 => unlimited
  int32 skip = 4;  // 0 => none
  repeated Sort sort = 5;
  repeated string populate = 6;
}

message GetRequest {
  string id = 1;
  repeated string populate = 2;
}

message SampleUpdate {
  string id = 1;
  repeated string fields = 2;
  Sample data = 3;
}

message RelatedModel {
  string id = 1;
  string name = 2;
  string sample = 3;
}

message Child {
  string id = 1;
  string name = 2;
}

message ChildrenRequest {
  string id = 1;
  repeated Child children = 2;
}

message Sample {
  string id = 1;
  string name = 2;
  int32 age = 3;
  bool married = 4;
  // subdocuments (embeded schema)
  repeated Child children = 5;
  // related documents (another schema)
  repeated RelatedModel relatedModels = 6;
}

message Samples {
  repeated Sample samples = 1;
}

message Empty {}

message IdRequest {
  string id = 1;
}

service SamplesService {
  rpc List (QueryRequest) returns (Samples) {}
  rpc Insert (Sample) returns (Sample) {}
  rpc Update (SampleUpdate) returns (Sample) {}
  rpc Get (GetRequest) returns (Sample) {}
  rpc Delete (IdRequest) returns (Empty) {}
  rpc PushChildren (ChildrenRequest) returns (Empty) {}
  rpc AddToSetChildren (ChildrenRequest) returns (Empty) {}
  rpc RemoveChildren (ChildrenRequest) returns (Empty) {}
}
